Rename JPMS module and launch scripts